fixed spacing on the cart and login page to align closer to top when no top nav is displayed

--- a/v5/cdebrowser/client/src/main/webapp/cde/cde.css
+++ b/v5/cdebrowser/client/src/main/webapp/cde/cde.css
@@ -279,7 +279,7 @@ ul.cdeSearchMessage li{
     color:#fff;
     padding:5px 15px 5px 15px;
     border-radius:5px 5px 0px 0px;
-    font-size:10pt;margin-top:23px;
+    font-size:10pt;margin-top:0px;
     margin-left:3px;
 }
 
